--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-rate-limit": "^8.2.1",
+    "express-rate-limiter": "^1.3.1",
     "morgan": "~1.9.1",
-    "sequelize": "~6.37.7",
-    "pg": "~8.16.3"
+    "pg": "~8.16.3",
+    "sequelize": "~6.37.7"
   }
 }
